--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
-
-*{font-size: 62.5%;
+ @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500&family=Quicksand:wght@300&display=swap'); 
+ 
+*{
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
+    font-size: 62.5%;
 }
 .header{ 
         /* in this website the flex direction is row which means main axis is horizontal so cross axis is column.. */
