--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 }
 .catalog__section{
     height: 90vh;
-    background-color: coral;
+    /*background-color: coral;*/
 
 }
 .catalog__title{
@@ -48,9 +48,9 @@
 
 .jewelry__categories{
     width: 80%;
-    height: 85vh;
+    height: 80vh;
     margin: auto;
-    background-color: pink;
+    /*background-color: pink*/
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
@@ -60,9 +60,8 @@
 .jewelry__containers{
     width: 100%;
     height: 40vh;
-    background-color: aquamarine;
-    /*border: .4rem solid black;*/
-    margin: 0 .5rem;
+   /* background-color: aquamarine;*/
+
     
 }
 .image__styles{
@@ -70,12 +69,19 @@
     height: 100%;
     object-fit: cover;
 }
+.image__styles:hover{
+    opacity: 0.3;
+    
 
+    
+}
 
 footer{
     height: 10vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 2.5rem;
+    font-family: 'Dosis', sans-serif;
 }
 
